--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+      initial-scale="1.0,"
+      maximum-scale="1.0,"
       name="description"
       content="Web site created using create-react-app"
     />
